# fast_food

app/: pyproject.toml
app/core/: config.py
app/db/: session.py
app/models/: __init__.py  base.py  menu.py
src/: pyproject.toml
